# alloconda

./: .gitignore  AGENTS.md  AUDIT_HASDECL.md  COMPATIBILITY_ASSESSMENT.md  DATACLASS_SERDE.md  Justfile  PLAN.md  README.md  ZIG_STYLE.md  book.toml  build.zig  build.zig.zon  flake.nix  pyproject.toml  wrangler.jsonc  zlint.json
.github/workflows/: ci.yml  docs.yml  e2e.yml
docs/: README.md  SUMMARY.md  build-backend.md  contributing.md  cookbook.md  cross-compile.md  errors.md  examples.md  faq.md  getting-started.md  manual-setup.md  project-layout.md  publishing.md  python-cli.md  roadmap.md  testing.md  types.md  zig-api.md
python/alloconda/: Justfile  README.md  pyproject.toml
python/alloconda/alloconda/: build_backend.py  cli.py  cli_build.py  cli_cache.py  cli_develop.py  cli_helpers.py  cli_init.py  cli_inspect.py  cli_output.py  cli_python.py  cli_wheel.py  cli_wheel_all.py  pbs.py  wheel_builder.py
python/alloconda/alloconda/templates/: build.zig.j2  build.zig.zon.j2  root.zig.j2
python/alloconda/tests/: test_cli_build.py  test_cli_cache.py  test_cli_helpers.py  test_pbs.py  test_pypi_zig.py  test_wheel_builder.py
python/allotest/: Justfile  README.md  build.zig  build.zig.zon  pyproject.toml
python/allotest/allotest/: __init__.py  __init__.pyi  _allotest.pyi
python/allotest/src/: root.zig
python/allotest/tests/: conftest.py  test_basic.py  test_classes.py  test_dataclass.py  test_dunder.py  test_errors.py  test_gc.py  test_interop.py  test_io.py  test_module_attrs.py  test_objects.py  test_types.py
python/fastproto/: Justfile  README.md  build.zig  build.zig.zon  pyproject.toml
python/fastproto/benchmarks/: bench_encoding.py  conftest.py
python/fastproto/fastproto/: __init__.py  _accelerated.py  _native.pyi  _pure.py
python/fastproto/src/: ByteView.zig  Field.zig  FieldInfo.zig  Reader.zig  Writer.zig  decode.zig  encode.zig  errors.zig  main.zig  root.zig  scalar.zig
python/fastproto/src/fastproto/: reader.zig  root.zig  wire.zig  writer.zig
python/fastproto/tests/: test_reader.py  test_serde.py  test_writer.py
python/wheeltest/: Justfile  README.md  pyproject.toml
python/wheeltest/wheeltest/: cli.py
python/zigadd/: Justfile  README.md  build.zig  build.zig.zon  pyproject.toml
python/zigadd/src/: root.zig
python/zigadd/tests/: test_gc.py  test_zigadd.py
python/zigadd/zigadd/: __init__.pyi  _zigadd.pyi
python/zigzon/: Justfile  README.md  build.zig  build.zig.zon  pyproject.toml
python/zigzon/docker/: Dockerfile.smoke
python/zigzon/scripts/: smoke-wheel.sh
python/zigzon/src/: root.zig
python/zigzon/tests/: test_zigzon.py
python/zigzon/zigzon/: __init__.py  __init__.pyi  _zigzon.pyi
scripts/cloudflare/: build-docs.sh
src/: errors.zig  ffi.zig  math.zig  method.zig  module.zig  root.zig  types.zig
