[project]
name = "alloconda-workspace"
version = "0.0.0"
requires-python = ">=3.14"
dependencies = [
    "alloconda",
    "ruff",
    "twine",
    "ty",
]

[tool.uv]
package = false

[tool.uv.workspace]
members = ["python/*"]

[tool.uv.sources]
alloconda = { workspace = true }
alloconda-docs = { workspace = true }
