[project]
name = "alloconda"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "click>=8.3.1",
    "httpx>=0.28.1",
]

[project.scripts]
alloconda = "alloconda.cli:main"

[dependency-groups]
dev = [
    "ruff>=0.14.10",
    "ty>=0.0.5",
]
