[project]
name = "alloconda"
version = "0.0.1a2"
description = "Zig-first Python extensions with cross-compiled wheels"
readme = "README.md"
requires-python = ">=3.14"
license = "Apache-2.0"
license-files = ["LICENSE"]
keywords = [
    "zig",
    "python",
    "extension",
    "build",
    "wheel",
    "pep-517",
]
authors = [
    { name = "Matt Robenolt", email = "m@robenolt.com" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Build Tools",
]
dependencies = [
    "click>=8.3.1",
    "httpx>=0.28.1",
    "jinja2>=3.1.4",
    "tomlkit>=0.13.3",
]

[project.urls]
Homepage = "https://github.com/mattrobenolt/alloconda"
Repository = "https://github.com/mattrobenolt/alloconda"
Issues = "https://github.com/mattrobenolt/alloconda/issues"

[project.scripts]
alloconda = "alloconda.cli:main"

[dependency-groups]
dev = [
    "ruff>=0.14.10",
    "ty>=0.0.5",
]

[tool.uv.build-backend]
module-name = "alloconda"
module-root = ""
source-include = ["alloconda/templates/**"]

[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"
