[project]
name = "allotest"
version = "0.1.0"
description = "Comprehensive test suite for alloconda"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
classifiers = ["Private :: Do Not Upload"]
dependencies = []

[project.optional-dependencies]
test = ["pytest"]

[tool.alloconda]
python-version = ["3.10", "3.11", "3.12", "3.13", "3.14"]

[build-system]
requires = ["alloconda"]
build-backend = "alloconda.build_backend"
