[project]
name = "zigadd"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
license = "Apache-2.0"
license-files = ["LICENSE"]
classifiers = [
    "Private :: Do Not Upload",
]
dependencies = []

[project.optional-dependencies]
test = [
    "pytest",
]

[build-system]
requires = ["alloconda"]
build-backend = "alloconda.build_backend"
