[project]
name = "zigzon"
version = "0.1.0"
description = "ZON codec powered by Zig"
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
license-files = ["LICENSE"]
classifiers = ["Private :: Do Not Upload"]
dependencies = []

[project.optional-dependencies]
test = ["pytest"]

[tool.alloconda]
optimize = "ReleaseFast"
python-version = ["3.12", "3.13", "3.14"]
targets = [
    "manylinux_2_28_x86_64",
    "manylinux_2_28_aarch64",
]

[build-system]
requires = ["alloconda"]
build-backend = "alloconda.build_backend"
